# purldb

./: .dockerignore  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.rst  azure-pipelines.yml  configure  docker-compose-matchcodeio.yml  docker-compose.common.yml  docker-compose.legacy.yml  docker-compose.matchcodeio.yml  docker-compose.yml  docker-compose_matchcodeio.yml  docker-compose_purldb.yml  docker-compose_purldb_production.yml  docker-compose_purldb_public.yml  docker-compose_traefik.yml  docker.env  docker_matchcode.env  docker_matchcodeio.env  docker_purldb.env  manage.py  manage_matchcode.py  manage_purldb.py  manage_purldb_public.py  package-lock.json  purlcli.py  purlcli_SAVED.py  pyproject-minecode_pipeline.toml  pyproject-minecode_pipelines.toml  pyproject-purl2vcs.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  (+1 more)
clearcode-toolkit/: .gitignore  CHANGELOG.rst  NOTICE  createdb.sh  devops-requirements.txt  manage.py  requirements.txt  setup.cfg  setup.py
clearcode-toolkit/docs/: ClearCode Introduction-June 2020.odp
matchcode/: .gitignore  CHANGELOG.rst  LICENSE  Makefile  README.rst  api.py  configure  hash.py  indexing.py  manage.py  match.py  match_test_utils.py  models.py  plugin_match.py  requirements-dev.txt  requirements.txt  setup.cfg  utils.py
matchcode-toolkit/: AUTHORS.rst  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg
matchcode-toolkit/tests/: test_fingerprinting.py
matchcode/migrations/: 0001_initial.py  0002_alter_approximatedirectorycontentindex_package_and_more.py  0003_hailstormindex.py  0003_snippetindex.py  0004_snippetindex_position_and_more.py  0005_stemmedsnippetindex.py
matchcode/pipelines/: matching.py
matchcode/pipes/: matching.py
matchcode/tests/: __init__.py  test_api.py  test_fingerprinting.py  test_index_packages.py  test_match.py  test_models.py
minecode/: MANIFEST.in  Makefile  README.md  README.rst  __init__.py  api.py  apps.py  command.py  configure  debutils.py  filter.py  indexing.py  ls.py  manage.py  model_utils.py  models.py  msys2.py  permissions.py  requirements-dev.txt  requirements.txt  route.py  rsync.py  saneyaml.py  seed.py  setup.cfg  tasks.py  utils.py  utils_test.py  utils_test.py.ABOUT  version.py
minecode/collectors/: __init__.py  alpine.py  alpm.py  bitbucket.py  cargo.py  composer.py  conan.py  conda.py  cpan.py  cran.py  debian.py  dockerhub.py  generic.py  github.py  gitlab.py  gnu.py  golang.py  hackage.py  hex.py  huggingface.py  luarocks.py  maven.py  npm.py  nuget.py  openssl.py  pub.py  pypi.py  rubygems.py  swift.py
minecode/management/: federatedcode.py  indexing.py  scanning.py  user_creation.py
minecode/mappers/: __init__.py  apache.py  bitbucket.py  bower.py  cpan.py  cran.py  debian.py  dockerhub.py  eclipse.py  fdroid.py  freebsd.py  freedesktop.py  github.py  gitlab.py  golang.py  googlecode.py  gstreamer.py  haxe.py  maven.py  npm.py  nuget.py  openssl.py  openwrt.py  packagist.py  pypi.py  repomd.py  rubygems.py  sourceforge.py
minecode/mappings/: gcode_keywords.py  gcode_licenses.py  gcode_programming_languages.py  pypi_trove.py  sfnet_licenses.py  sfnet_programming_languages.py
minecode/migrations/: 0001_initial.py  0002_auto_20160707_1249.py  0003_auto_20160712_1223.py  0004_auto_20160713_1731.py  0005_resourceuri_metadata.py  0006_remove_resourceuri_metadata.py  0007_change_unique_constraints_on_resourceuri.py  0008_change_default_sort_order_on_resourceuri.py  0009_resourceuri_source_uri.py  0010_resourceuri_mining_level.py  0011_auto_20170807_0253.py  0012_auto_20170807_0444.py  0013_auto_20170807_0511.py  0014_auto_20170807_0529.py  0015_auto_20180607_0851.py  0016_remove_resourceuri_sig.py  0017_auto_20180619_2236.py  0018_scannableuri_package_id.py  0019_auto_20180716_1648.py  0020_resourceuri_package_url.py  0021_auto_20181026_1635.py  0022_auto_20190307_2332.py  0023_rename_minecode_r_is_visi_29fde2_idx_minecode_re_is_visi_51562c_idx_and_more.py  0024_remove_resourceuri_minecode_re_is_visi_51562c_idx_and_more.py  0025_populate_has_error_fields.py  0026_set_is_visitable_for_maven_index_uris.py  0027_replace_http_with_https_in_maven_uris.py  0028_priorityresourceuri.py  0029_priorityresourceuri_has_processing_error_and_more.py  0030_scannableuri_rescan_alter_scannableuri_scan_status.py  0031_importableuri.py  0032_processingerror.py  0032_remove_scannableuri_minecode_sc_scan_st_d6a459_idx_and_more.py  0033_scannableuri_populate_uuid.py  0034_scannableuri_alter_uuid_field.py  0035_create_scan_queue_workers_group.py  0035_rename_rescan_uri_scannableuri_reindex_uri.py  0036_priorityresourceuri_addon_pipelines.py  0036_scannableuri_pipelines.py  0037_auto_20240304_1933.py  (+3 more)
minecode/miners/: __init__.py  alpine.py  alpm.py  apache.py  bitbucket.py  bower.py  cargo.py  composer.py  conda.py  cpan.py  cran.py  debian.py  dockerhub.py  eclipse.py  fdroid.py  fedora.py  freebsd.py  freedesktop.py  github.py  gitlab.py  gnu.py  golang.py  googlecode.py  gstreamer.py  haxe.py  hex.py  java_stream.py  maven.py  npm.py  nuget.py  openssl.py  openwrt.py  packagist.py  pub.py  pypi.py  repodata.py  repodata_rpms.py  repomd.py  rubygems.py  sourceforge.py  (+1 more)
minecode/tests/: __init__.py  create_scanning_fixtures.py  test_apache.py  test_api.py  test_bitbucket.py  test_bower.py  test_command.py  test_conan.py  test_cpan.py  test_cran.py  test_debian.py  test_dockerhub.py  test_eclipse.py  test_fdroid.py  test_filter.py  test_freebsd.py  test_freedesktop.py  test_gnu.py  (+38 more)
packagedb/: .gitignore  AUTHORS.rst  Makefile  README.rst  api.py  api_custom.py  filters.py  find_source_repo.py  forms.py  from_purl.py  manage.py  models.py  package_managers.py  purl-superseded-01.py  purl.py  purl_cli-superseded.py  purl_url_utils.py  pyproject.toml  requirements-dev.txt  requirements.txt  sbom.py  schedules.py  serializers.py  setup.cfg  signals.py  tasks.py  throttling.py  to_purl.py  urls.py  views.py
purl2vcs/: CHANGELOG.rst  NOTICE  README.rst  apache-2.0.LICENSE  find_source_repo.py  pyproject.toml
(+1441 files in other folders)
