[metadata]
name = purldb
version = 5.0.1
license_files =
    LICENSE
    AUTHORS.rst
    CHANGELOG.rst
author = nexB. Inc. and others
author_email = info@aboutcode.org
license = Apache-2.0 AND CC-BY-SA-4.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = A Django-based utility to collect Package data and Resources for collection and matching.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/aboutcode-org/purldb

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

keywords =
    matchcode
    packagedb
    scancode
    purl
    purldb
    clearcode


[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    aboutcode.pipeline == 0.1.0
    arrow == 1.3.0
    bitarray == 2.9.2
    debian-inspector == 31.1.0
    commoncode == 32.0.0
    Django == 5.1.2
    django-environ == 0.11.2
    django-rq == 2.10.2
    djangorestframework == 3.15.2
    django-filter == 24.3
    drf-spectacular == 0.27.2
    fetchcode == 0.5.1
    gunicorn == 23.0.0
    ftputil == 5.1.0
    jawa == 2.2.0
    markdown == 3.6
    natsort == 8.4.0
    packageurl-python == 0.15.6
    psycopg[binary] == 3.2.3
    PyGithub == 2.3.0
    reppy2 == 0.3.6
    rq-scheduler == 0.13.1
    rubymarshal == 1.0.3
    scancode-toolkit[packages] == 32.3.0
    urlpy == 0.5
    matchcode-toolkit == 5.1.0
    purl2vcs == 2.0.0
    univers == 30.12.1
    scancodeio == 34.8.3
    gitpython == 3.1.43
setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.8

[options.packages.find]
where = .

[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    pytest-django
    aboutcode-toolkit >= 6.0.0
    black
    mock
    flot
    ruff
    django-debug-toolbar

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton
    sphinx_rtd_dark_mode

[options.entry_points]
console_scripts =
    purldb = purldb:command_line

scancodeio_pipelines =
    matching = matchcode_pipeline.pipelines.matching:Matching
    d2d = scanpipe.pipelines.deploy_to_develop:DeployToDevelop
