[metadata]
name = purldb
version = 6.0.0
license_files =
    LICENSE
    AUTHORS.rst
    CHANGELOG.rst
author = nexB. Inc. and others
author_email = info@aboutcode.org
license = Apache-2.0 AND CC-BY-SA-4.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = A Django-based utility to collect Package data and Resources for collection and matching.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/aboutcode-org/purldb

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

keywords =
    matchcode
    packagedb
    scancode
    purl
    purldb
    clearcode


[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    aboutcode.pipeline >= 0.2.1
    arrow >= 1.3.0
    debian-inspector >= 31.1.0
    commoncode >= 32.3.0
    Django >= 5.1.11
    django-environ >= 0.12.0
    django-rq >= 3.0.1
    djangorestframework >= 3.16.0
    django-filter >= 25.1
    drf-spectacular >= 0.28.0
    fetchcode >= 0.6.0
    gunicorn >= 23.0.0
    ftputil >= 5.1.0
    jawa >= 2.2.0
    markdown >= 3.8.2
    natsort >= 8.4.0
    packageurl-python >= 0.17.3
    psycopg[binary] >= 3.2.9
    PyGithub >= 2.6.1
    reppy2 >= 0.3.6
    rq-scheduler >= 0.14.0
    rubymarshal == 1.0.3
    scancode-toolkit[packages] >= 32.4.0
    urlpy >= 0.5
    matchcode-toolkit >= 7.2.2
    purl2vcs >= 2.0.0
    univers >= 31.0.0
    scancodeio >= 35.3.0
    GitPython >= 3.1.44
    samecode >= 0.5.1
    # FederatedCode integration
    aboutcode.federatedcode >= 0.1.0
setup_requires = setuptools_scm[toml] >= 4


[options.packages.find]
where = .

[options.extras_require]
dev =
    pytest >= 7.0.1
    pytest-xdist >= 2
    pytest-django
    aboutcode-toolkit >= 11.1.1
    mock
    flot
    ruff
    django-debug-toolbar
    twine
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton
    sphinx_rtd_dark_mode

[options.entry_points]
console_scripts =
    purldb = purldb:command_line

scancodeio_pipelines =
    matching = matchcode_pipeline.pipelines.matching:Matching
    d2d = scanpipe.pipelines.deploy_to_develop:DeployToDevelop
    mine_cargo = minecode_pipeline.pipelines.mine_cargo:MineCargo