[metadata]
license_files =
    NOTICE
    apache-2.0.LICENSE
    README.rst


[aliases]
release = clean --all sdist bdist_wheel


[tool:pytest]
norecursedirs =
    .git
    bin
    dist
    build
    _build
    dist
    etc
    local
    ci
    docs
    man
    share
    samples
    .cache
    .settings
    Include
    include
    Lib
    lib
    lib64
    Lib64
    Scripts
    thirdparty
    tmp
    src/*/data
    tests/*/data

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfExXw
    --strict
    --ignore setup.py
    --doctest-modules
