[metadata]
license_files =
    LICENSE
    AUTHORS.rst
    CHANGELOG.rst
name = matchcode
author = nexB. Inc. and others
author_email = info@aboutcode.org
license = nexB Proprietary-license

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = MatchCode
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/matchcode

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

keywords =
    matchcode

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    bitarray == 2.6.0
    commoncode == 31.0.0
    Django == 4.1.2
    django-environ==0.9.0
    djangorestframework == 3.14.0
    django-filter == 22.1
    packagedb == 2.0.0
    psycopg2 == 2.9.3
    scancode-toolkit == 31.2.2
setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.8.*

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    pytest-django
    aboutcode-toolkit >= 6.0.0
    black

docs=
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    doc8>=0.8.1

[options.entry_points]
scancode_scan =
    halo1 = matchcode.plugin_fingerprint:Halo1Scanner

scancodeio_pipelines =
    matching = matchcode.pipelines.matching:Matching
