[metadata]
name = minecode
version = 1.2.4

author = nexB. Inc. and others
author_email = info@nexb.com
license = license = Apache-2.0 AND CC-BY-SA-4.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = A purl mining tool
long_description = file:README.rst
url = https://github.com/nexB/purldb/minecode
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities

keywords =
    packagedb
    scancode
    purl
    purldb

license_files =
    apache-2.0.LICENSE
    cc-by-sa-4.0.LICENSE
    CHANGELOG.rst
    README.rst
    AUTHORS.rst
    NOTICE


[options]
#setup_requires = setuptools_scm[toml] >= 4

package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    arrow==1.2.3
    debian-inspector==31.0.0
    Django==4.1.2
    django-filter==22.1
    djangorestframework==3.14.0
    ftputil==5.0.4
    jawa==2.2.0
    packagedb
    psycopg2-binary==2.9.3
    PyGithub==1.56
    rubymarshal==1.0.3
    scancode-toolkit==31.2.1
    reppy2==0.3.6
    urlpy==0.5

python_requires = >=3.8.*


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 6.0.0
    black
    mock


docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1
