[metadata]
name = packagedb
version = 1.2.4

author = nexB. Inc. and others
author_email = info@nexb.com
license = license = Apache-2.0 AND CC-BY-SA-4.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = A purl (Package URL) Database
long_description = file:README.rst
url = https://github.com/nexB/purldb/packagedb
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities

keywords =
    packagedb
    scancode
    purl
    purldb

license_files =
    apache-2.0.LICENSE
    cc-by-sa-4.0.LICENSE
    CHANGELOG.rst
    README.rst
    AUTHORS.rst
    NOTICE


[options]
#setup_requires = setuptools_scm[toml] >= 4

package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django>=4.1.2
    djangorestframework>=3.14.0
    django-environ>=0.8.0
    django-filter>=22.1
    psycopg2-binary>=2.9.3
    packageurl-python>=0.10.4
    natsort>=8.2.0

python_requires = >=3.8.*


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    pytest-django
    aboutcode-toolkit >= 6.0.0
    black
    mock


docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1
